# Django-HTTP-Forms-Cowsay

./: README.md
django-cowsay-lnginyard-main 2/: README.md  pyproject.toml
django-cowsay-lnginyard-main 2/config/: settings.py  urls.py
django-cowsay-lnginyard-main 2/cowsay_app/: forms.py  models.py  views.py
django-cowsay-lnginyard-main 2/cowsay_app/migrations/: 0001_initial.py
django-cowsay-lnginyard-main 2/templates/: cowsay.html  history.html
