[tool.poetry]
name = "django-cowsay-lnginyard"
version = "0.1.0"
description = ""
authors = ["Lorenzo Ginyard <lnginyard@gmail.kenzie.academy.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^5.0.0"

[tool.poetry.dev-dependencies]
cowsay = "^5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
